<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <ProgressBar
        android:id="@+id/progressBarLoading"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:progress="0"
        android:max="100"
        tools:progress="30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_simple_service"
        style="@style/ServiceButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service"
        />

    <Button
        android:id="@+id/btn_foreground_service"
        style="@style/ServiceButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foreground_service"
        />

    <Button
        android:id="@+id/btn_intent_service"
        style="@style/ServiceButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_service"
        />

    <Button
        android:id="@+id/btn_job_scheduler"
        style="@style/ServiceButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_scheduler"
        />

    <Button
        android:id="@+id/btn_job_intent_service"
        style="@style/ServiceButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_intent_service"
        />

    <Button
        android:id="@+id/btn_alarm_manager"
        style="@style/ServiceButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_manager"
        />

    <Button
        android:id="@+id/btn_work_manager"
        style="@style/ServiceButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/work_manager"
        />

    <Button
        android:id="@+id/btn_stop"
        style="@style/ServiceButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:backgroundTint="#FF5722"
        />

</LinearLayout>